--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,12 @@
-<div class="container">
+<div class="container loginCenter">
   <div class="row center">
-    Login really works!!!
+    <div class="row form-group">
+      <label>user name</label>
+      <input type="text" ng-model="name" placeholder="enter user name" />
+    </div>
+    <div class="row form-group">
+      <label>password</label>
+      <input type="password" ng-model="name" placeholder="enter user name" />
+    </div>
   </div>
 </div>
