--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,17 @@
-<div class="container loginCenter">
-  <div class="row center">
-    <div class="row form-group">
-      <label>user name</label>
-      <input type="text" ng-model="name" placeholder="enter user name" />
-    </div>
-    <div class="row form-group">
-      <label>password</label>
-      <input type="password" ng-model="name" placeholder="enter user name" />
-    </div>
+<div class="container">
+  <div class="loginCenter">
+    <form role="form">
+      <div class="form-content">
+        <div class="form-group">
+          <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+        </div>
+      </div>
+      <a class="btn rounded-btn" [routerLink]="['/dashboard']" (click)="onLoggedin()"> Log in </a>
+      &nbsp;
+      <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a>
+    </form>
   </div>
 </div>
